--- a/index.html
+++ b/index.html
@@ -16,5 +16,23 @@
 	<figcaption>Test Image</figcaption>
 </figure>
 <p>Let's see <em>it</em> turns out! </p>
+<br>
+<hr>
+<p>
+	Hi!
+</p>
+<aside>
+	This is a test to see how aside works
+</aside>
+<ul>
+	<li> Just seeing how unordered lists run</li>
+	<li>Still seeing....</li>
+</ul>
+<br>
+<hr>
+<p>
+<a href="https://learn.shayhowe.com/html-css/getting-to-know-html/#semantics-overview">Click on this one</a>
+</p>
+
 </body>
 </html>
